ingresses/influxdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: influxdb.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: influxdb
          servicePort: 8087
