ingresses/nodered-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodered-ingress
spec:
  rules:
    - host: nodered.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nodered
              servicePort: 1880
